# hf_workspace

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/agents_course/dummy_agent/: __main__.py  dummy_agent.ipynb
